# funkstrom

./: .gitignore  AGENTS.md  Cargo.toml  PLANNED_FEATURES.md  README.md  config.toml  config.toml.example  config_liveset_test_2034.toml  openapi.yaml
docs/: configuration.md  general.md  library-database.md  schedule-playout.md
e2e/: test.sh
src/: audio_buffer.rs  audio_metadata.rs  audio_processor.rs  audio_reader.rs  cli.rs  config.rs  hearthis_client.rs  library_db.rs  library_scanner.rs  m3u_parser.rs  main.rs  schedule_engine.rs  server_icecast.rs  server_metadata.rs  server_swagger.rs
templates/: info.html
test_playlists/: evening.m3u  morning.m3u
