[package]
name = "funkstrom"
version = "0.1.0"
edition = "2021"
description = "Icecast-compatible internet radio server"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
keywords = ["radio", "icecast", "streaming", "audio"]
categories = ["multimedia::audio", "network-programming"]

[dependencies]
mimalloc = "0.1.48"
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
crossbeam-channel = "0.5"
futures-util = "0.3"
hyper = { version = "0.14", features = ["stream"] }
bytes = "1.0"
tokio-stream = "0.1"
audiotags = "0.5"
serde_json = "1.0"
rust-embed = "8.0"
cron = "0.12"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"
tinytemplate = "1.2"

[dev-dependencies]
tempfile = "3.8"

[profile.production]
inherits = "release"
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols